--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ a:hover {
 
 .navbar-b.navbar-reduce {
   transition: all .5s ease-in-out;
-  background-color: darkgray;
+  background-color: #DCDCDC;
   padding-top: 15px;
   padding-bottom: 15px;
 }
