--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ a:hover {
 .bg-image {
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
 }
 
