--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #354f52;
   text-decoration: none;
   transition: all 0.7s ease-in-out;
 }
@@ -30,7 +30,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #354f52;
 }
 
 .color-d {
@@ -85,7 +85,7 @@ a:hover {
 }
 
 .overlay-mf {
-  position: absolute;
+  position: inherit;
   top: 0;
   left: 0px;
   padding: 0;
@@ -158,7 +158,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #2f2e46;
   margin: 0 auto;
 }
 
@@ -244,7 +244,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #354f52;
   margin-right: 10px;
 }
 
@@ -362,7 +362,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #354f52;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -650,7 +650,7 @@ a:hover {
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #354f52;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -844,13 +844,13 @@ footer .credits a {
 }
 
 .button:hover {
-  background-color: #0062d3;
+  background-color: #354f52;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #354f52;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -895,7 +895,7 @@ footer .credits a {
 
 @media (min-width: 768px) {
   .box-shadow-full {
-    padding: 3rem;
+    padding: 1rem;
   }
 
   .navbar-b.navbar-trans .nav-item,
@@ -1256,11 +1256,11 @@ fieldset[disabled] .button {
 
 a.box:hover,
 a.box:focus {
-  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px #1a8cff;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px #354f52;
 }
 
 a.box:active {
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #1a8cff;
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #354f52;
 }
 
 .button {
@@ -1313,7 +1313,7 @@ a.box:active {
 
 .button:focus,
 .button.is-focused {
-  border-color: #1a8cff;
+  border-color: #354f52;
   color: #363636;
 }
 
@@ -1359,13 +1359,13 @@ fieldset[disabled] .button.is-text {
 .button.is-ghost {
   background: none;
   border-color: transparent;
-  color: #1a8cff;
+  color: #354f52;
   text-decoration: none;
 }
 
 .button.is-ghost:hover,
 .button.is-ghost.is-hovered {
-  color: #1a8cff;
+  color: #354f52;
   text-decoration: underline;
 }
 
@@ -1951,7 +1951,7 @@ fieldset[disabled] .button.is-primary.is-outlined {
   background-color: transparent;
   border-color: #5074a7;
   box-shadow: none;
-  color: #0a62e0;
+  color: #354f52;
 }
 
 .button.is-primary.is-inverted.is-outlined {
@@ -2003,14 +2003,14 @@ fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
 }
 
 .button.is-link {
-  background-color: #1a8cff;
+  background-color: #354f52;
   border-color: transparent;
   color: #fff;
 }
 
 .button.is-link:hover,
 .button.is-link.is-hovered {
-  background-color: #0d86ff;
+  background-color: #354f52;
   border-color: transparent;
   color: #fff;
 }
@@ -2028,21 +2028,21 @@ fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
 
 .button.is-link:active,
 .button.is-link.is-active {
-  background-color: #017fff;
+  background-color: #354f52;
   border-color: transparent;
   color: #fff;
 }
 
 .button.is-link[disabled],
 fieldset[disabled] .button.is-link {
-  background-color: #1a8cff;
-  border-color: #1a8cff;
+  background-color: #354f52;
+  border-color: #354f52;
   box-shadow: none;
 }
 
 .button.is-link.is-inverted {
   background-color: #fff;
-  color: #1a8cff;
+  color: #354f52;
 }
 
 .button.is-link.is-inverted:hover,
@@ -2055,7 +2055,7 @@ fieldset[disabled] .button.is-link.is-inverted {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: #1a8cff;
+  color: #354f52;
 }
 
 .button.is-link.is-loading::after {
@@ -2064,21 +2064,21 @@ fieldset[disabled] .button.is-link.is-inverted {
 
 .button.is-link.is-outlined {
   background-color: transparent;
-  border-color: #1a8cff;
-  color: #1a8cff;
+  border-color: #354f52;
+  color: #354f52;
 }
 
 .button.is-link.is-outlined:hover,
 .button.is-link.is-outlined.is-hovered,
 .button.is-link.is-outlined:focus,
 .button.is-link.is-outlined.is-focused {
-  background-color: #1a8cff;
-  border-color: #1a8cff;
+  background-color: #354f52;
+  border-color: #354f52;
   color: #fff;
 }
 
 .button.is-link.is-outlined.is-loading::after {
-  border-color: transparent transparent #1a8cff #1a8cff !important;
+  border-color: transparent transparent #354f52 #354f52 !important;
 }
 
 .button.is-link.is-outlined.is-loading:hover::after,
@@ -2091,9 +2091,9 @@ fieldset[disabled] .button.is-link.is-inverted {
 .button.is-link.is-outlined[disabled],
 fieldset[disabled] .button.is-link.is-outlined {
   background-color: transparent;
-  border-color: #1a8cff;
+  border-color: #354f52;
   box-shadow: none;
-  color: #1a8cff;
+  color: #354f52;
 }
 
 .button.is-link.is-inverted.is-outlined {
@@ -2107,14 +2107,14 @@ fieldset[disabled] .button.is-link.is-outlined {
 .button.is-link.is-inverted.is-outlined:focus,
 .button.is-link.is-inverted.is-outlined.is-focused {
   background-color: #fff;
-  color: #1a8cff;
+  color: #354f52;
 }
 
 .button.is-link.is-inverted.is-outlined.is-loading:hover::after,
 .button.is-link.is-inverted.is-outlined.is-loading.is-hovered::after,
 .button.is-link.is-inverted.is-outlined.is-loading:focus::after,
 .button.is-link.is-inverted.is-outlined.is-loading.is-focused::after {
-  border-color: transparent transparent #1a8cff #1a8cff !important;
+  border-color: transparent transparent #354f52 #354f52 !important;
 }
 
 .button.is-link.is-inverted.is-outlined[disabled],
@@ -2127,25 +2127,25 @@ fieldset[disabled] .button.is-link.is-inverted.is-outlined {
 
 .button.is-link.is-light {
   background-color: #ebf5ff;
-  color: #0068d1;
+  color: #354f52;
 }
 
 .button.is-link.is-light:hover,
 .button.is-link.is-light.is-hovered {
   background-color: #deeeff;
   border-color: transparent;
-  color: #0068d1;
+  color: #354f52;
 }
 
 .button.is-link.is-light:active,
 .button.is-link.is-light.is-active {
   background-color: #d1e8ff;
   border-color: transparent;
-  color: #0068d1;
+  color: #354f52;
 }
 
 .button.is-info {
-  background-color: #3e8ed0;
+  background-color: #354f52;
   border-color: transparent;
   color: #fff;
 }
@@ -2170,21 +2170,21 @@ fieldset[disabled] .button.is-link.is-inverted.is-outlined {
 
 .button.is-info:active,
 .button.is-info.is-active {
-  background-color: #3082c5;
+  background-color: #354f52;
   border-color: transparent;
   color: #fff;
 }
 
 .button.is-info[disabled],
 fieldset[disabled] .button.is-info {
-  background-color: #3e8ed0;
-  border-color: #3e8ed0;
+  background-color: #354f52;
+  border-color: #354f52;
   box-shadow: none;
 }
 
 .button.is-info.is-inverted {
   background-color: #fff;
-  color: #3e8ed0;
+  color: #354f52;
 }
 
 .button.is-info.is-inverted:hover,
@@ -2197,7 +2197,7 @@ fieldset[disabled] .button.is-info.is-inverted {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: #3e8ed0;
+  color: #354f52;
 }
 
 .button.is-info.is-loading::after {
@@ -2206,21 +2206,21 @@ fieldset[disabled] .button.is-info.is-inverted {
 
 .button.is-info.is-outlined {
   background-color: transparent;
-  border-color: #3e8ed0;
-  color: #3e8ed0;
+  border-color: #354f52;
+  color: #354f52;
 }
 
 .button.is-info.is-outlined:hover,
 .button.is-info.is-outlined.is-hovered,
 .button.is-info.is-outlined:focus,
 .button.is-info.is-outlined.is-focused {
-  background-color: #3e8ed0;
-  border-color: #3e8ed0;
+  background-color: #354f52;
+  border-color: #354f52;
   color: #fff;
 }
 
 .button.is-info.is-outlined.is-loading::after {
-  border-color: transparent transparent #3e8ed0 #3e8ed0 !important;
+  border-color: transparent transparent #354f52 #354f52 !important;
 }
 
 .button.is-info.is-outlined.is-loading:hover::after,
@@ -2233,9 +2233,9 @@ fieldset[disabled] .button.is-info.is-inverted {
 .button.is-info.is-outlined[disabled],
 fieldset[disabled] .button.is-info.is-outlined {
   background-color: transparent;
-  border-color: #3e8ed0;
+  border-color: #354f52;
   box-shadow: none;
-  color: #3e8ed0;
+  color: #354f52;
 }
 
 .button.is-info.is-inverted.is-outlined {
@@ -2249,14 +2249,14 @@ fieldset[disabled] .button.is-info.is-outlined {
 .button.is-info.is-inverted.is-outlined:focus,
 .button.is-info.is-inverted.is-outlined.is-focused {
   background-color: #fff;
-  color: #3e8ed0;
+  color: #354f52;
 }
 
 .button.is-info.is-inverted.is-outlined.is-loading:hover::after,
 .button.is-info.is-inverted.is-outlined.is-loading.is-hovered::after,
 .button.is-info.is-inverted.is-outlined.is-loading:focus::after,
 .button.is-info.is-inverted.is-outlined.is-loading.is-focused::after {
-  border-color: transparent transparent #3e8ed0 #3e8ed0 !important;
+  border-color: transparent transparent #354f52 #354f52 !important;
 }
 
 .button.is-info.is-inverted.is-outlined[disabled],
@@ -3424,17 +3424,17 @@ div.icon-text {
 }
 
 .notification.is-link {
-  background-color: #1a8cff;
+  background-color: #354f52;
   color: #fff;
 }
 
 .notification.is-link.is-light {
   background-color: #ebf5ff;
-  color: #0068d1;
+  color: #354f52;
 }
 
 .notification.is-info {
-  background-color: #3e8ed0;
+  background-color: #354f52;
   color: #fff;
 }
 
@@ -3581,35 +3581,35 @@ div.icon-text {
 }
 
 .progress.is-link::-webkit-progress-value {
-  background-color: #1a8cff;
+  background-color: #354f52;
 }
 
 .progress.is-link::-moz-progress-bar {
-  background-color: #1a8cff;
+  background-color: #354f52;
 }
 
 .progress.is-link::-ms-fill {
-  background-color: #1a8cff;
+  background-color: #354f52;
 }
 
 .progress.is-link:indeterminate {
-  background-image: linear-gradient(to right, #1a8cff 30%, #ededed 30%);
+  background-image: linear-gradient(to right, #354f52 30%, #ededed 30%);
 }
 
 .progress.is-info::-webkit-progress-value {
-  background-color: #3e8ed0;
+  background-color: #354f52;
 }
 
 .progress.is-info::-moz-progress-bar {
-  background-color: #3e8ed0;
+  background-color: #354f52;
 }
 
 .progress.is-info::-ms-fill {
-  background-color: #3e8ed0;
+  background-color: #354f52;
 }
 
 .progress.is-info:indeterminate {
-  background-image: linear-gradient(to right, #3e8ed0 30%, #ededed 30%);
+  background-image: linear-gradient(to right, #354f52 30%, #ededed 30%);
 }
 
 .progress.is-success::-webkit-progress-value {
@@ -3768,15 +3768,15 @@ div.icon-text {
 
 .table td.is-link,
 .table th.is-link {
-  background-color: #1a8cff;
-  border-color: #1a8cff;
+  background-color: #354f52;
+  border-color: #354f52;
   color: #fff;
 }
 
 .table td.is-info,
 .table th.is-info {
-  background-color: #3e8ed0;
-  border-color: #3e8ed0;
+  background-color: #354f52;
+  border-color: #354f52;
   color: #fff;
 }
 
@@ -4040,17 +4040,17 @@ div.icon-text {
 }
 
 .tag:not(body).is-link {
-  background-color: #1a8cff;
+  background-color: #354f52;
   color: #fff;
 }
 
 .tag:not(body).is-link.is-light {
   background-color: #ebf5ff;
-  color: #0068d1;
+  color: #354f52;
 }
 
 .tag:not(body).is-info {
-  background-color: #3e8ed0;
+  background-color: #354f52;
   color: #fff;
 }
 
@@ -6337,7 +6337,7 @@ a.has-text-primary-dark:focus {
 }
 
 .has-text-link {
-  color: #1a8cff !important;
+  color: #354f52 !important;
 }
 
 a.has-text-link:hover,
@@ -6346,7 +6346,7 @@ a.has-text-link:focus {
 }
 
 .has-background-link {
-  background-color: #1a8cff !important;
+  background-color: #354f52 !important;
 }
 
 .has-text-link-light {
@@ -6363,7 +6363,7 @@ a.has-text-link-light:focus {
 }
 
 .has-text-link-dark {
-  color: #0068d1 !important;
+  color: #354f52 !important;
 }
 
 a.has-text-link-dark:hover,
@@ -6372,11 +6372,11 @@ a.has-text-link-dark:focus {
 }
 
 .has-background-link-dark {
-  background-color: #0068d1 !important;
+  background-color: #354f52 !important;
 }
 
 .has-text-info {
-  color: #3e8ed0 !important;
+  color: #354f52 !important;
 }
 
 a.has-text-info:hover,
@@ -6385,7 +6385,7 @@ a.has-text-info:focus {
 }
 
 .has-background-info {
-  background-color: #3e8ed0 !important;
+  background-color: #354f52 !important;
 }
 
 .has-text-info-light {
@@ -8573,7 +8573,7 @@ a.has-text-danger-dark:focus {
 }
 
 .hero.is-link {
-  background-color: #1a8cff;
+  background-color: #354f52;
   color: #fff;
 }
 
@@ -8606,7 +8606,7 @@ a.has-text-danger-dark:focus {
 }
 
 .hero.is-link .tabs li.is-active a {
-  color: #1a8cff !important;
+  color: #354f52 !important;
   opacity: 1;
 }
 
@@ -8626,20 +8626,20 @@ a.has-text-danger-dark:focus {
 .hero.is-link .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #1a8cff;
+  color: #354f52;
 }
 
 .hero.is-link.is-bold {
   background-image: linear-gradient(
     141deg,
     #0099e6 0%,
-    #1a8cff 71%,
+    #354f52 71%,
     #3477ff 100%
   );
 }
 
 .hero.is-info {
-  background-color: #3e8ed0;
+  background-color: #354f52;
   color: #fff;
 }
 
@@ -8672,7 +8672,7 @@ a.has-text-danger-dark:focus {
 }
 
 .hero.is-info .tabs li.is-active a {
-  color: #3e8ed0 !important;
+  color: #354f52 !important;
   opacity: 1;
 }
 
@@ -8692,14 +8692,14 @@ a.has-text-danger-dark:focus {
 .hero.is-info .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #3e8ed0;
+  color: #354f52;
 }
 
 .hero.is-info.is-bold {
   background-image: linear-gradient(
     141deg,
     #208fbc 0%,
-    #3e8ed0 71%,
+    #354f52 71%,
     #4d83db 100%
   );
 }
@@ -9099,7 +9099,7 @@ a {
 }
 
 a:hover {
-  color: #0066cd;
+  color: #97a97c;
 }
 
 .button {
